force-app/main/default/objects/Org_Wallet__c/Org_Wallet__c.object-meta.xml
<CustomObject>
    <description>Organization&apos;s Web3 Digital Wallet</description>
    <label>Org Wallet</label>
    <nameField>
        <label>Wallet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Org Wallets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>