force-app/main/default/objects/Org_Wallet__c/fields/Networks__c.field-meta.xml
<CustomField>
    <fullName>Networks__c</fullName>
    <label>Preferred Networks</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Blockchains</valueSetName>
    </valueSet>
</CustomField>