force-app/main/default/objects/Org_Wallet__c/fields/Test_Networks__c.field-meta.xml
<CustomField>
    <fullName>Test_Networks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set to true, we monitor the TestNets in addition to MainNet.</description>
    <label>Test Networks</label>
    <type>Checkbox</type>
</CustomField>