force-app/main/default/objects/Org_Wallet__c/fields/Wallet_Address__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Address__c</fullName>
    <description>Publicly available address.</description>
    <label>Wallet Address</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>