force-app/main/default/objects/Org_Wallet__c/fields/Wallet_Connected__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Connected__c</fullName>
    <formula>NOT(ISBLANK(XRPWebhookSubscriptionId__c))</formula>
    <label>Wallet Connected</label>
    <type>Checkbox</type>
</CustomField>