force-app/main/default/objects/Org_Wallet__c/fields/XRPWebhookSubscriptionId__c.field-meta.xml
<CustomField>
    <fullName>XRPWebhookSubscriptionId__c</fullName>
    <label>XRPWebhookSubscriptionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>